# mncrft

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
glimac/src/: CubeGL.cpp  FreeFlyCamera.cpp  SDLWindowManager.cpp  Skybox.cpp
include/: CameraAbstract.hpp  CameraFirstPerson.hpp  Collision.hpp  CubeData.hpp  CubeDirt.hpp  CubeFoundation.hpp  CubeLight.hpp  CubeRock.hpp  CubeSand.hpp  File.hpp  Game.hpp  GameInteraction.hpp  GameUtilities.hpp  Level.hpp  Movement.hpp  MovementAbstract.hpp  PerlinNoise.hpp  Player.hpp  ProgramShader_main.hpp  Textures.hpp
scripts/: compile_install_jsoncpp.sh  compile_mncrft.sh  launchDefault.sh  launchNice.sh
shaders/: cubeMap.fs.glsl  cubeMap.vs.glsl  multiple_matrix.fs.glsl  multiple_matrix.vs.glsl  quad.vs.glsl  tex3D.fs.glsl  tex3D.vs.glsl
src/: CameraAbstract.cpp  CameraFirstPerson.cpp  Collision.cpp  CubeData.cpp  CubeData.hpp  CubeDirt.cpp  CubeDirt.hpp  CubeFoundation.cpp  CubeFoundation.hpp  CubeLight.cpp  CubeRock.cpp  CubeRock.hpp  CubeSand.cpp  CubeSand.hpp  File.cpp  Game.cpp  GameInteraction.cpp  GameUtilities.cpp  Level.cpp  Movement.cpp  MovementAbstract.cpp  Player.cpp  ProgramShader_main.cpp  Textures.cpp  exo6_quad_IBO.cpp  instanced_rendering_without_ibo.cpp  main.cpp  triforce.cpp
tests/: CMakeLists.txt  exo6_quad_IBO.cpp  instanced_rendering_without_ibo.cpp  testCubeGL.cpp  testCubeGLInstancedRendering.cpp  testFile.cpp  testGameGrid.cpp  testGamePlayer.cpp  testJson.cpp  testJsonGraft.cpp  testSkybox.cpp  testTextures.cpp  triforce.cpp
tests/outputJson/: game.json  test.json
(+6 files in other folders)
